option(buildTests OFF)
option(buildExamples OFF)
option(buildGui ON)
add_subdirectory(LibStevi)

set(STEREOVISION_LIB ${STEREOVISION_LIB} PARENT_SCOPE)

set(QIMAGEDISPLAYWIDGET_LIB qImageWidget PARENT_SCOPE)

set (MODULES_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/LibStevi/submodules PARENT_SCOPE)
set (MODULES_LINK_DIRECTORIES PARENT_SCOPE)
